# i3dr_phobos-ros

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  package.xml
.github/workflows/: ros-build.yml
calibration/phobos/02-06-2020/bin1/: left.yaml  right.yaml
calibration/phobos/02-06-2020/bin2/: left.yaml  right.yaml
calibration/phobos/02-06-2020/bin2b/: left.yaml  right.yaml
calibration/phobos/04-03-2020/: left.yaml  right.yaml
calibration/phobos/04-05-2020/: left.yaml  right.yaml
calibration/phobos/05-03-20/: left.yaml  right.yaml
calibration/phobos/06-03-20/: left.yaml  right.yaml
calibration/phobos/25-02-2020/: left.yaml  right.yaml
calibration/phobos/29-05-2020/: left.yaml  right.yaml
install/: i3dr_phobos_https.rosinstall  i3dr_phobos_ros_https.rosinstall  i3dr_phobos_ros_ssh.rosinstall  i3dr_phobos_ssh.rosinstall
launch/: hand_eye_calibration.launch  phobos.launch  phobos_capture.launch  phobos_processing.launch  stereo_calibration.launch  stereo_matcher.launch
rviz/: phobos_nuclear_scene.rviz  phobos_nuclear_standalone_scene.rviz  phobos_scene.rviz  phobos_standalone_scene.rviz  scene.rviz
scripts/: calibrate.py  capture.py
scripts/cal/: left.yaml  right.yaml
src/: tiscamera_ctrl.py
urdf/: i3dr_phobos_scene.urdf.xacro  phobos.urdf.xacro  phobos_nuclear.urdf.xacro
