<?xml version="1.0"?>
<package format="2">

  <name>i3dr_phobos</name>
  <version>0.0.1</version>
  <description>
     A driver for I3D robotics' phobos stereo camera system. This package works with both Phobos and Phobos Nuclear.
  </description>

  <maintainer email="bknight@i3drobotics.com">Ben Knight</maintainer>
  <author email="bknight@i3drobotics.com">Ben Knight</author>
  
  <license>MIT</license>

  <url type="website">http://i3drobotics.com/</url>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>camera_info_manager</depend>
  <depend>image_transport</depend>
  <depend>nodelet</depend>
  <depend>sensor_msgs</depend>
  <depend>i3dr_stereo_camera</depend>

</package>
